Output-section added

--- a/src/index.htm
+++ b/src/index.htm
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="Container">
-    <div class="Calculator">
+  <div class="container">
+    <div class="calculator">
       <div class="input-section">
         <h2>Mortage Calculator</h2>
         <form class="Mortage form">
@@ -31,11 +31,9 @@
         </form>
       </div>
       <div class="output-section">
-       <h2>Your results</h2> 
-       <p>Your results are shown below based on the information you provided. To adjust the results. edit the form and click "calculate repayments"again.</p>
-       <p id="monthly-payments">Your monthly repayments: £<span>0.00</span></p>
-       <p id="total-payments">Total you'll repay over the term: £<span>0.00</span</p>
-
+        <img src="/design/illustration-empty.svg" alt="">
+       <h2>Result shown here</h2> 
+       <p>Complete the form and click"calculate repayments"to see what your monthly repayments would be.</p>
       </div>
     </div>
   </div>
